# test-ci-cd

./: pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
report/allure-data/: 34b248aa-4bb7-4094-bbe7-597bb6027aed-container.json  406df3f2-ce70-442c-90ab-97c68d23d24a-result.json
report/allure-report/: index.html
report/allure-report/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
report/allure-report/data/test-cases/: 5f6f7ec920800776.json
report/allure-report/export/: influxDbData.txt  prometheusData.txt
report/allure-report/history/: history.json
report/allure-report/widgets/: severity.json  summary.json
testcases/: TestCases.py  __init__.py
