[project]
name = "test-ci-cd"
version = "0.1.0"
description = ""
authors = [
    {name = "ceiling",email = "zcl15093643240@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
